# test_task

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt
examples/some_hash_example/: CMakeLists.txt  main.cpp
include/: SomeHash.h  SomeHash.hpp
src/: SomeHash.cpp
tests/: CMakeLists.txt  tests.cpp
